fixing author spacing

--- a/_sass/author-info.scss
+++ b/_sass/author-info.scss
@@ -55,6 +55,7 @@
     width: 580px;
     max-width: 100%;
     line-height: 36px;
+	padding-: 0;
 }
 
 .author-container .author-info-image:nth-of-type(n+2){
@@ -64,12 +65,7 @@
 .author-container .author-info-description:nth-of-type(n+2){
 	padding-top: 40px;
 }
-
-.author-container .author-info-description:first-of-type{
-	padding-top: 0;
-}
 	
-
 @media (max-width: 820px) {
     .author-info-image {
         width: 100%;
